[package]
name = "hosthog"
version = "0.2.0"
edition = "2021"
description = "announce which resources you need on collaboratively used linux hosts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheets = "0.4"
clap = { version = "4", features = [ "derive" ] }
google-authz = "0.0.2"
dateparser = "0.2"
duration-str = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
libc = "0.2"
nix = { version = "0.27", features = ["mount"] }
netstat = "0.7"
once_cell = "1.19"
zbus_systemd = { version = "0.25600", features = ["systemd1"] }
tokio = { version = "1.38", features = ["full"] }
